Estilice la seccion con mi informacion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="icon" href="content/Images/icon_page_ico">
     <script src="https://kit.fontawesome.com/f4b56acafd.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Portfolio DR</title>
 </head>
 <body>
@@ -42,11 +51,16 @@
         <section class="presentation_container">
 
             <div class="description_a description">
-                <p class="text_description">Desarrollador <br> Web</p>
+                <p 
+                    class="text_description"
+                
+                >
+                    Desarrollador <br> Web
+                </p>
             </div>
 
             <div class="face_photo">
-                <img src="content/Images/Foto_frontal.jpg" alt="Dominguez Rodrigo" title="Dominguez Rodrigo">
+                <img src="content/Images/Foto_frontal.jpg" alt="Dominguez Rodrigo" title="Dominguez Rodrigo" id="inicio">
             </div>
 
             <div class="description_b description">
@@ -69,7 +83,7 @@
                     
                     <p class="text_sobre_mi">
                         Hola! Te agradezco un monton que pases por mi pagina, espero tengas una buena estadia aqui.
-                        Me presento. Me llamo Rodrigo, soy desarrollador web y programador. Me gusta programar desde vieojuegos hasta paginas web profesionales para personas como, por ejemplo, empresarios.
+                        Me presento. Me llamo Rodrigo, tengo 20 años, vivo actualmente en Argentina y soy desarrollador web y programador. Me gusta programar desde vieojuegos hasta paginas web profesionales para personas como, por ejemplo, empresarios.
                     </p>
 
                 </section>
