Agregue scroll animado. traduje por completo la version en ingles y desarrolle la estructura de la version mobile

--- a/index-es.html
+++ b/index-es.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="mobile/style_responsive.css">
     <link rel="icon" href="content/Images/icon_page_ico">
     <script src="https://kit.fontawesome.com/f4b56acafd.js" crossorigin="anonymous"></script>
 
@@ -20,7 +21,7 @@
 </head>
 <body>
 
-    <div class="dektop_version">
+    <div class="desktop_version">
 
         <header class="header_container">
 
@@ -316,7 +317,7 @@
                     </div>
 
                     <div class="input_name input_style">
-                        <input type="text" name="name" id="" placeholder="Nombre y Apellido">
+                        <input type="text" placeholder="Nombre y Apellido">
                     </div>
 
                     <div class="input_emai input_style">
