Formulario de contacto version mobile y modificacion en seccion proyectos.

--- a/english/index-en.html
+++ b/english/index-en.html
@@ -481,22 +481,34 @@
             <h2>Projects</h2>
 
             <div class="box-mobile box-m-a">
-
+                <a href="">
+                    <img src="../content/Images/dinosaurio_juego.png" alt="Dinosaur Game">
+                </a>
             </div>
             <div class="box-mobile box-m-b">
-
+                <a href="">
+                    <img src="../content/Images/Calculadora.png" alt="Calculator">
+                </a>
             </div>
             <div class="box-mobile box-m-c">
-
+                <a href="">
+                    <img src="../content/Images/Pinterest.png" alt="Pinterest Mod">
+                </a>
             </div>
             <div class="box-mobile box-m-d">
-
+                <a href="">
+                    <img src="../content/Images/Cartas_magicas.png" alt="Magic Cards">
+                </a>
             </div>
             <div class="box-mobile box-m-e">
-
+                <a href="">
+                    <img src="../" alt="Coming Soon">
+                </a>
             </div>
             <div class="box-mobile box-m-f">
-
+                <a href="">
+                    <img src="../" alt="Coming Soon">
+                </a>
             </div>
 
         </section>
@@ -504,6 +516,27 @@
         <section class="contact-mobile-container">
 
             <h2>Contact</h2>
+
+            <div class="body-form-mobile">
+
+                <div class="input-name-mobile input-mobile">
+                    <input type="text" name="name" placeholder="Full Name">
+                </div>
+                <div class="input-email-mobile input-mobile">
+                    <input type="email" name="email"
+                    placeholder="Email">
+                </div>
+                <div class="input-subjet-mobile input-mobile">
+                    <input type="text" name="subjet" placeholder="subjet">
+                </div>
+                <div class="input-message-mobile input-mobile">
+                    <textarea name="message" placeholder="Message"></textarea>
+                </div>
+                <div class="input-submit-mobile input-mobile">
+                    <input type="submit" name="submit" value="Submit">
+                </div>
+
+            </div>
 
         </section>
 
