Modificacion a background en version mobile y desktop, el formulario mobile es funcional y agregue animacion a boton bars

--- a/english/index-en.html
+++ b/english/index-en.html
@@ -517,7 +517,10 @@
 
             <h2>Contact</h2>
 
-            <div class="body-form-mobile">
+            <form 
+                class="body-form-mobile"
+                action="https://formsubmit.co/8077517da5efbb02b5d86c22cc7481ad" method="POST"
+            >
 
                 <div class="input-name-mobile input-mobile">
                     <input type="text" name="name" placeholder="Full Name">
@@ -533,10 +536,10 @@
                     <textarea name="message" placeholder="Message"></textarea>
                 </div>
                 <div class="input-submit-mobile input-mobile">
-                    <input type="submit" name="submit" value="Submit">
+                    <input type="submit" value="Submit">
                 </div>
 
-            </div>
+            </form>
 
         </section>
 
