Menu hamburguesa, traductor en mobile

--- a/english/index-en.html
+++ b/english/index-en.html
@@ -370,7 +370,22 @@
             </div>
             
             <div class="bars-mobile">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" id="bars"></i>
+            </div>
+
+            <div class="menu-burger-container-mobile hide-menu-mobile" id="menu-mobile">
+
+                <div class="cross-mobile">
+                    <i class="fa-solid fa-xmark" id="cross"></i>
+                </div>
+
+                <div class="languaje-set-mobile">
+
+                    <span class="es">Español</span>
+                    <input type="checkbox" class="check-mobile" checked>
+                    <span class="en">English</span>
+
+                </div>
             </div>
 
         </header>
@@ -536,7 +551,9 @@
                     <textarea name="message" placeholder="Message"></textarea>
                 </div>
                 <div class="input-submit-mobile input-mobile">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" 
+                        style="color: #f1f1f1;"
+                    >
                 </div>
 
             </form>
