--- a/index-es.html
+++ b/index-es.html
@@ -362,7 +362,22 @@
             </div>
             
             <div class="bars-mobile">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" id="bars"></i>
+            </div>
+
+            <div class="menu-burger-container-mobile hide-menu-mobile" id="menu-mobile">
+
+                <div class="cross-mobile">
+                    <i class="fa-solid fa-xmark" id="cross"></i>
+                </div>
+
+                <div class="languaje-set-mobile">
+
+                    <span class="es">Español</span>
+                    <input type="checkbox" class="check-mobile">
+                    <span class="en">English</span>
+
+                </div>
             </div>
 
         </header>
@@ -375,10 +390,10 @@
             <div class="subtitles-mobile-presentation">
                 <div class="list">
                     <div class="item">
-                        <h3>Web Developer</h3>
+                        <h3>Desarrollador Web</h3>
                     </div>
                     <div class="item">
-                        <h3>Programmer</h3>
+                        <h3>Programador</h3>
                     </div>
                 </div>
             </div>
@@ -386,19 +401,19 @@
 
         <section class="about-me-mobile-container">
 
-            <h2>About Me</h2>
+            <h2>Sobre Mí</h2>
 
             <p>
-                Hello! i really apreciate that you are here in my first Oficial Portfolio! i hope that you have a nice experience here.
-                I introduce myself... My name is Rodrigo, i am 20 years old, im living currently in Argentina and i am a web developer and programmer. I like programming since videogames until professionals webs to, for example, businessmen.
-
+                Hola! aprecio mucho que pases en mi primer Portfolio Oficial! Espero tengas una buena experiencia aqui con mis proyectos!
+                <br>
+                Me presento... Me llamo Rodrigo. Tengo 20 años. Soy Argentino y resido actualmente en este país. Soy programador y desarrollador web. Voy a ser estudiante de Ciberseguridad y mi objetivo es conseguir mi primer empleo como programador o desarrollador web.
             </p>
 
         </section>
 
         <section class="skills-mobile-container">
 
-            <h2>Skills</h2>
+            <h2>Habilidades</h2>
 
             <div class="grid-skills">
                 <div class="skill-mobile skill-m-a">
@@ -470,38 +485,76 @@
 
         <section class="projects-mobile-container">
 
-            <h2>Projects</h2>
+            <h2>Proyectos</h2>
 
             <div class="box-mobile box-m-a">
-
+                <a href="">
+                    <img src="../content/Images/dinosaurio_juego.png" alt="Dinosaur Game">
+                </a>
             </div>
             <div class="box-mobile box-m-b">
-
+                <a href="">
+                    <img src="../content/Images/Calculadora.png" alt="Calculator">
+                </a>
             </div>
             <div class="box-mobile box-m-c">
-
+                <a href="">
+                    <img src="../content/Images/Pinterest.png" alt="Pinterest Mod">
+                </a>
             </div>
             <div class="box-mobile box-m-d">
-
+                <a href="">
+                    <img src="../content/Images/Cartas_magicas.png" alt="Magic Cards">
+                </a>
             </div>
             <div class="box-mobile box-m-e">
-
+                <a href="">
+                    <img src="../" alt="Coming Soon">
+                </a>
             </div>
             <div class="box-mobile box-m-f">
-
+                <a href="">
+                    <img src="../" alt="Coming Soon">
+                </a>
             </div>
 
         </section>
 
         <section class="contact-mobile-container">
 
-            <h2>Contact</h2>
+            <h2>Contactame!</h2>
+
+            <form 
+                class="body-form-mobile"
+                action="https://formsubmit.co/8077517da5efbb02b5d86c22cc7481ad" method="POST"
+            >
+
+                <div class="input-name-mobile input-mobile">
+                    <input type="text" name="name" placeholder="Nombre y Apellido">
+                </div>
+                <div class="input-email-mobile input-mobile">
+                    <input type="email" name="email"
+                    placeholder="Email">
+                </div>
+                <div class="input-subjet-mobile input-mobile">
+                    <input type="text" name="subjet" placeholder="Asunto">
+                </div>
+                <div class="input-message-mobile input-mobile">
+                    <textarea name="message" placeholder="Memsajee"></textarea>
+                </div>
+                <div class="input-submit-mobile input-mobile">
+                    <input type="submit" value="Enviar" 
+                        style="color: #f1f1f1;"
+                    >
+                </div>
+
+            </form>
 
         </section>
 
         <footer class="footer-mobile-container">
             <p>
-                This page was developed by Rodrigo.
+                Esta pagina ha sido desarrollada por Rodrigo.
             </p>
         </footer>
        </div>
