Desarrolle las respectivas paginas de cada proyecto subido al portfolio tanto en español como en ingles.

--- a/english/index-en.html
+++ b/english/index-en.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../normalize.css">
-    <link rel="stylesheet" href="../mobile/style_responsive.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
+    <link rel="stylesheet" href="../CSS/style_responsive.css">
     <link rel="icon" href="../content/Images/icon_page_ico">
 
     <script src="https://kit.fontawesome.com/f4b56acafd.js" crossorigin="anonymous"></script>
@@ -175,7 +175,7 @@
                                 A little game based on the dinosaur game of the google chrome no conection screen.
                             </p>
 
-                            <a href="#" type="button">See more</a>
+                            <a href="../content_pages/content_dinosaur/project-en.html" type="button">See more</a>
 
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                                 A Python calculator made with this languaje from zero, with my personal things and an a executable archive.
                             </p>
 
-                            <a href="#" type="button">See More</a>
+                            <a href="../content_pages/content_calculate/project-en.html" type="button">See More</a>
 
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                                 Magic Cards with two faces with wich i did this section.
                             </p>
 
-                            <a href="#" type="button">See More</a>
+                            <a href="../content_pages/content_magic-cards/project-en.html" type="button">See More</a>
 
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                                 My own version of pinterest parodying the original version.
                             </p>
 
-                            <a href="#" type="button">See More</a>
+                            <a href="../content_pages/content_pinterest/project-en.html" type="button">See More</a>
 
                         </div>
                     </div>
@@ -393,7 +393,10 @@
        <div class="body-mobile">
 
         <section class="presentation-mobile-container">
-            <div class="presentation-img-container-mobile"><img src="../content/Images/Foto_frontal.jpg" alt="Rodrigo Dominguez" class="presentation-img-mobile"></div>
+
+            <div class="presentation-img-container-mobile">
+                <img src="../content/Images/Foto_frontal.jpg" alt="Rodrigo Dominguez" class="presentation-img-mobile">
+            </div>
 
             <div class="subtitles-mobile-presentation">
                 <div class="list">
@@ -405,6 +408,7 @@
                     </div>
                 </div>
             </div>
+            
         </section>
 
         <section class="about-me-mobile-container">
@@ -496,22 +500,22 @@
             <h2>Projects</h2>
 
             <div class="box-mobile box-m-a">
-                <a href="">
+                <a href="../content_pages/content_dinosaur/project-en.html">
                     <img src="../content/Images/dinosaurio_juego.png" alt="Dinosaur Game">
                 </a>
             </div>
             <div class="box-mobile box-m-b">
-                <a href="">
+                <a href="../content_pages/content_calculate/project-en.html">
                     <img src="../content/Images/Calculadora.png" alt="Calculator">
                 </a>
             </div>
             <div class="box-mobile box-m-c">
-                <a href="">
+                <a href="../content_pages/content_pinterest/project-en.html">
                     <img src="../content/Images/Pinterest.png" alt="Pinterest Mod">
                 </a>
             </div>
             <div class="box-mobile box-m-d">
-                <a href="">
+                <a href="../content_pages/content_magic-cards/project-en.html">
                     <img src="../content/Images/Cartas_magicas.png" alt="Magic Cards">
                 </a>
             </div>
