--- a/index-es.html
+++ b/index-es.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="mobile/style_responsive.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="/CSS/style_responsive.css">
     <link rel="icon" href="content/Images/icon_page_ico">
     <script src="https://kit.fontawesome.com/f4b56acafd.js" crossorigin="anonymous"></script>
 
@@ -172,7 +172,7 @@
 
                             <p>Un pequeño juego de dinosaurio corriendo inspirado en el juego de la pantalla sin conexion de Google Chrome.</p>
 
-                            <a href="#" type="button">Ver más</a>
+                            <a href="content_pages/content_dinosaur/project-es.html" type="button">Ver más</a>
 
                         </div>
                     </div>
@@ -197,7 +197,7 @@
 
                             <p>Una Calculadora hecha con python desde cero, con mis toques personales y un archivo executable.</p>
 
-                            <a href="#" type="button">Ver más</a>
+                            <a href="content_pages/content_calculate/project-es.html" type="button">Ver más</a>
 
                         </div>
                     </div>
@@ -222,7 +222,7 @@
 
                             <p>Cartas magicas con dos caras con las cuales estilice este apartado.</p>
 
-                            <a href="#" type="button">Ver más</a>
+                            <a href="content_pages/content_magic-cards/project-es.html" type="button">Ver más</a>
 
                         </div>
                     </div>
@@ -247,7 +247,7 @@
 
                             <p>Mi propia version de pinterest parodiando la original.</p>
 
-                            <a href="#" type="button">Ver más</a>
+                            <a href="content_pages/content_pinterest/project-es.html" type="button">Ver más</a>
 
                         </div>
                     </div>
@@ -488,22 +488,22 @@
             <h2>Proyectos</h2>
 
             <div class="box-mobile box-m-a">
-                <a href="">
+                <a href="content_pages/content_dinosaur/project-es.html">
                     <img src="../content/Images/dinosaurio_juego.png" alt="Dinosaur Game">
                 </a>
             </div>
             <div class="box-mobile box-m-b">
-                <a href="">
+                <a href="content_pages/content_calculate/project-es.html">
                     <img src="../content/Images/Calculadora.png" alt="Calculator">
                 </a>
             </div>
             <div class="box-mobile box-m-c">
-                <a href="">
+                <a href="content_pages/content_pinterest/project-es.html">
                     <img src="../content/Images/Pinterest.png" alt="Pinterest Mod">
                 </a>
             </div>
             <div class="box-mobile box-m-d">
-                <a href="">
+                <a href="content_pages/content_magic-cards/project-es.html">
                     <img src="../content/Images/Cartas_magicas.png" alt="Magic Cards">
                 </a>
             </div>
